<resources>
    <string name="app_name">Обожаю яйца!</string>
    <string name="navigation_recipes_text">РЕЦЕПТ</string>
    <string name="navigation_timer_text">ТАЙМЕР</string>
    <string name="navigation_info_text">ИНФО</string>
    <string name="main_timer_text" translatable="false">00:00</string>
    <string name="how_to_cook_egg_text">Как сварить яйца?</string>
    <string name="reset_timer_button_text">СБРОСИТЬ</string>
    <string name="start_timer_button_text">НАЧАТЬ ВАРКУ</string>
    <string name="zero_timer_text">0:00</string>
    <string name="timer_prev_text_running">Вынимайте через:</string>
    <string name="timer_prev_text_finish">Вынимайте!</string>
    <string name="timer_prev_text_reset">Таймер был сброшен</string>
    <string name="timer_prev_text_default">Время варки после закипания:</string>
    <string name="placeholder_text">Placeholder</string>
    <string name="notification_finish_title_text">Яйца сварились!</string>
    <string name="notification_finish_content_text">Пора вытаскивать и охлаждать</string>
    <string name="recipe_title_text">Рецепт идеальных яиц:</string>
    <string name="recipe1">1) Берем небольшую кастрюлю</string>
    <string name="recipe2">2) Кладем в нее яйца, заливаем водой</string>
    <string name="recipe3">3) Ставим на средний огонь</string>
    <string name="recipe4">4) Начнет закипать - ВКЛЮЧАЕМ ТАЙМЕР</string>
    <string name="recipe5">5) После варки охладите яйца под краном</string>
    <string name="recipe6">6) Наслаждаемся!</string>
    <string name="advice_title">Советы:</string>
    <string name="advice1">Проколите тупой конец яйца иголкой, чтобы оно не треснуло во время варки</string>
    <string name="advice2">Скорлупа будет хорошо отделяться, если после варки яйца надколоть, а затем опустить в холодную воду.</string>
    <string name="advice3">Можно легко отличить вареное яйцо от сырого, не разбивая скорлупы,
        если вращать его на столе. Вареное яйцо будет крутиться, а сырое, сделав один-два оборота, остановится</string>
    <string name="info_title">В 100гр яиц содержится:</string>
    <string name="app_version">version</string>
    <string name="info_calories_title">Калории (ккал):</string>
    <string name="info_calories_content">155–159</string>
    <string name="info_fibre_title">Белки (гр):</string>
    <string name="info_fibre_content">12,7</string>
    <string name="info_fat_title">Жиры (гр):</string>
    <string name="info_fat_content">10,9</string>
    <string name="info_carbo_title">Углеводы (гр):</string>
    <string name="info_carbo_content">0,7</string>
    <string name="info_marks_title">Маркировки на яйце:</string>
    <string name="info_mark_d">Буква "Д":</string>
    <string name="info_mark_d_content">Диетическое яйцо, срок хранения 7 дней</string>
    <string name="info_mark_o">Буква О:</string>
    <string name="info_mark_o_content">Столовое яйцо, срок хранения 25 дней</string>
    <string name="info_category_title">Категория (второй символ):</string>
    <string name="info_category_v">Высшая категория (В) — 75 г и более</string>
    <string name="info_category_o">Отборное яйцо (О) — от 65 до 74,9 г.</string>
    <string name="info_category_1">Первая категория (1) — от 55 до 64,9 г.</string>
    <string name="info_category_2">Вторая категория (2) — от 45 до 54,9 г.</string>
    <string name="info_category_3">Третья категория (3) — от 35 до 44,9 г.</string>
    <string name="app_intro_title">Таймер варки яиц</string>
    <string name="app_intro_title2">Обожаю яйца!</string>
    <string name="app_intro_description">Таймер поможет Вам легко сварить яйца до нужной готовности. Воспользуйтесь ползунком и выберете свой вариант</string>
    <string name="checkbox_big_eggs">Яйца крупные</string>
    <string name="checkbox_fresh_eggs">Яйца свежие</string>
    <string name="fresh_eggs_note_4_days">(до 4 дней)</string>

    <string-array name="type_of_cook">
        <item>Всмятку</item>
        <item>В мешочек</item>
        <item>Вкрутую</item>
        <item>Вкрутую +</item>
    </string-array>
    <string-array name="description_of_cook">
        <item>Приготовленный белок, желток полностью жидкий</item>
        <item>Приготовленный белок, центр желтка жидкий</item>
        <item>Твердый белок, мягкий желток</item>
        <item>Твердый белок, твердый желток</item>
    </string-array>
</resources>
